--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yuebing-media",
-  "version": "1.0.22",
+  "version": "1.0.23",
   "type": "module",
   "description": "Media processing framework for yuebing",
   "keywords": [
@@ -51,6 +51,7 @@
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
     "mobiletto-orm": "^2.2.36",
+    "mobiletto-orm-typedef": "^2.4.5",
     "mocha": "^10.2.0",
     "prettier": "^3.0.0",
     "tslint-config-prettier": "^1.18.0",
