--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yuebing-media",
-  "version": "1.0.45",
+  "version": "1.0.46",
   "type": "module",
   "description": "Media processing framework for yuebing",
   "keywords": [
@@ -50,12 +50,13 @@
     "chai": "^4.3.6",
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
+    "mobiletto-base": "^2.1.1",
     "mobiletto-orm": "^2.2.43",
     "mobiletto-orm-typedef": "^2.4.8",
     "mocha": "^10.2.0",
     "prettier": "^3.0.0",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^5.1.6",
-    "yuebing-model": "^2.7.18"
+    "yuebing-model": "^2.7.19"
   }
 }
