--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yuebing-media",
-  "version": "1.1.16",
+  "version": "1.1.17",
   "type": "module",
   "description": "Media processing framework for yuebing",
   "keywords": [
@@ -54,6 +54,6 @@
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^5.1.6",
     "yuebing-model": "^2.7.25",
-    "yuebing-util": "^1.0.0"
+    "zilla-util": "^1.0.1"
   }
 }
